--- a/public/css/global.css
+++ b/public/css/global.css
@@ -20,7 +20,11 @@ a {
 }
 
 h1 {
-	font-size: 18px;
+	font-size: 20px;
+}
+
+h3 {
+	font-size: 16px;
 }
 
 .underline {
@@ -110,8 +114,6 @@ main {
 
 .grid {
 	display: grid;
-	height: 100%;
-	width: 100%;
 }
 
 .grid-cols-1 {
@@ -294,6 +296,18 @@ main {
 	border-radius: 6px;
 }
 
+.rounded-10 {
+	border-radius: 10px;
+}
+
+.rounded-tl-10 {
+	border-top-left-radius: 10px;
+}
+
+.rounded-tr-10 {
+	border-top-right-radius: 10px;
+}
+
 .p-6 {
 	padding: 6px;
 }
@@ -314,9 +328,19 @@ main {
 	padding: 60px;
 }
 
+.px-20 {
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
 .px-40 {
 	padding-left: 40px;
 	padding-right: 40px;
+}
+
+.py-9 {
+	padding-top: 9px;
+	padding-bottom: 9px;
 }
 
 .pl-40 {
@@ -344,6 +368,10 @@ main {
 	margin-bottom: 6px;
 }
 
+.mb-10 {
+	margin-bottom: 10px;
+}
+
 .mb-30 {
 	margin-bottom: 30px;
 }
@@ -362,6 +390,10 @@ main {
 
 .gap-10 {
 	gap: 10px;
+}
+
+.gap-20 {
+	gap: 20px;
 }
 
 .transition-all {
@@ -420,6 +452,7 @@ Modal
 
 .modal-body p {
 	padding: 20px 0;
+	line-height: 20px;
 }
 
 /*=============
@@ -504,4 +537,20 @@ input:focus {
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: 12px 12px;
+}
+
+.card {
+	transition: box-shadow 0.2s, border-color 0.2s;
+}
+
+.card:hover {
+	border-color: transparent;
+	box-shadow: 0 1px 2px -2px rgba(0, 0, 0, 0.16), 0 3px 6px 0 rgba(0, 0, 0, 0.12), 0 5px 12px 4px rgba(0, 0, 0, 0.09);
+}
+
+.card-img {
+	margin-top: -1px;
+	margin-left: -1px;
+	margin-right: -1px;
+	overflow: hidden;
 }
